@@ -98,6 +98,17 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|TimeUnit
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|atomic
 operator|.
 name|AtomicLong
@@ -1187,10 +1198,6 @@ specifier|final
 name|Connector
 name|connector
 decl_stmt|;
-specifier|final
-name|QueuedThreadPool
-name|threadPool
-decl_stmt|;
 if|if
 condition|(
 literal|"SelectChannel"
@@ -1242,16 +1249,6 @@ name|connector
 operator|=
 name|c
 expr_stmt|;
-name|threadPool
-operator|=
-operator|(
-name|QueuedThreadPool
-operator|)
-name|c
-operator|.
-name|getThreadPool
-argument_list|()
-expr_stmt|;
 block|}
 elseif|else
 if|if
@@ -1298,16 +1295,6 @@ name|connector
 operator|=
 name|c
 expr_stmt|;
-name|threadPool
-operator|=
-operator|(
-name|QueuedThreadPool
-operator|)
-name|c
-operator|.
-name|getThreadPool
-argument_list|()
-expr_stmt|;
 block|}
 else|else
 block|{
@@ -1335,35 +1322,62 @@ argument_list|(
 literal|"127.0.0.1"
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|threadPool
-operator|!=
-literal|null
-condition|)
-block|{
-name|threadPool
+comment|// Connectors by default inherit server's thread pool.
+name|QueuedThreadPool
+name|qtp
+init|=
+operator|new
+name|QueuedThreadPool
+argument_list|()
+decl_stmt|;
+name|qtp
 operator|.
 name|setMaxThreads
 argument_list|(
 literal|10000
 argument_list|)
 expr_stmt|;
-name|threadPool
+name|qtp
 operator|.
 name|setMaxIdleTimeMs
 argument_list|(
-literal|5000
+operator|(
+name|int
+operator|)
+name|TimeUnit
+operator|.
+name|SECONDS
+operator|.
+name|toMillis
+argument_list|(
+literal|5
+argument_list|)
 argument_list|)
 expr_stmt|;
-name|threadPool
+name|qtp
 operator|.
 name|setMaxStopTimeMs
 argument_list|(
-literal|30000
+operator|(
+name|int
+operator|)
+name|TimeUnit
+operator|.
+name|MINUTES
+operator|.
+name|toMillis
+argument_list|(
+literal|1
+argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
+name|server
+operator|.
+name|setThreadPool
+argument_list|(
+name|qtp
+argument_list|)
+expr_stmt|;
 name|server
 operator|.
 name|setConnectors
@@ -1392,104 +1406,72 @@ expr_stmt|;
 block|}
 else|else
 block|{
-for|for
-control|(
-name|Connector
-name|connector
-range|:
+if|if
+condition|(
 name|server
 operator|.
-name|getConnectors
+name|getThreadPool
 argument_list|()
-control|)
+operator|==
+literal|null
+condition|)
 block|{
+comment|// Connectors by default inherit server's thread pool.
 name|QueuedThreadPool
-name|threadPool
+name|qtp
 init|=
-literal|null
+operator|new
+name|QueuedThreadPool
+argument_list|()
 decl_stmt|;
-if|if
-condition|(
-name|connector
-operator|instanceof
-name|SocketConnector
-condition|)
-block|{
-name|threadPool
-operator|=
-call|(
-name|QueuedThreadPool
-call|)
-argument_list|(
-operator|(
-name|SocketConnector
-operator|)
-name|connector
-argument_list|)
-operator|.
-name|getThreadPool
-argument_list|()
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|connector
-operator|instanceof
-name|SelectChannelConnector
-condition|)
-block|{
-name|threadPool
-operator|=
-call|(
-name|QueuedThreadPool
-call|)
-argument_list|(
-operator|(
-name|SelectChannelConnector
-operator|)
-name|connector
-argument_list|)
-operator|.
-name|getThreadPool
-argument_list|()
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|threadPool
-operator|!=
-literal|null
-condition|)
-block|{
-name|threadPool
+name|qtp
 operator|.
 name|setMaxThreads
 argument_list|(
 literal|10000
 argument_list|)
 expr_stmt|;
-name|threadPool
+name|qtp
 operator|.
 name|setMaxIdleTimeMs
 argument_list|(
-literal|5000
+operator|(
+name|int
+operator|)
+name|TimeUnit
+operator|.
+name|SECONDS
+operator|.
+name|toMillis
+argument_list|(
+literal|5
+argument_list|)
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|stopAtShutdown
-condition|)
-block|{
-name|threadPool
+name|qtp
 operator|.
 name|setMaxStopTimeMs
 argument_list|(
-literal|100
+operator|(
+name|int
+operator|)
+name|TimeUnit
+operator|.
+name|SECONDS
+operator|.
+name|toMillis
+argument_list|(
+literal|1
+argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
-block|}
+name|server
+operator|.
+name|setThreadPool
+argument_list|(
+name|qtp
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|// Initialize the servlets
